--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-toast-notifications": "^2.4.0",
     "react-tooltip": "^4.2.10",
     "styled-components": "^5.2.1",
+    "uuid": "^8.3.2",
     "web-vitals": "^0.2.4",
     "web3": "1.2.6",
     "web3modal": "^1.9.0"
