feat(global): adds curve connector and improves ui

--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "query-string": "^6.13.6",
     "raw-loader": "^4.0.2",
     "react": "^17.0.1",
-    "react-beautiful-dnd": "^13.0.0",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^17.0.1",
+    "react-draggable": "^4.4.3",
+    "react-resizable": "^1.11.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-toast-notifications": "^2.4.0",
