--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "query-string": "^6.13.6",
     "raw-loader": "^4.0.2",
     "react": "^17.0.1",
+    "react-beautiful-dnd": "^13.0.0",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^17.0.1",
     "react-draggable": "^4.4.3",
