--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "react-bootstrap": "^1.0.1",
     "react-dom": "^17.0.1",
     "react-draggable": "^4.4.3",
+    "react-redux-toastr": "^7.6.5",
     "react-resizable": "^1.11.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
-    "react-toast-notifications": "^2.4.0",
     "react-tooltip": "^4.2.11",
     "styled-components": "^5.2.1",
     "uuid": "^8.3.2",
