feat(actions & settings): starts build and strategy function

--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@makerdao/dai": "^0.32.11",
+    "@makerdao/dai-plugin-mcd": "^1.6.21",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
