chore(public): updates description

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Defi lego",
-  "name": "Simple dashboard for interacting with Defi protocols through drag and drop",
+  "name": "Simple dashboard for playing with main Defi protocols",
   "icons": [
     {
       "src": "favicon.ico",
