--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@walletconnect/web3-provider": "^1.2.2",
-    "axios": "^0.20.0",
+    "axios": "^0.21.1",
     "bignumber.js": "^9.0.0",
     "bootstrap": "^4.5.2",
     "cra-template": "1.0.3",
@@ -27,6 +27,7 @@
     "react-redux-toastr": "^7.6.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-switch": "^6.0.0",
     "react-tooltip": "^4.2.11",
     "styled-components": "^5.2.1",
     "uuid": "^8.3.2",
