--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-bootstrap": "^1.0.1",
     "react-dom": "^17.0.1",
     "react-draggable": "^4.4.3",
+    "react-loading-overlay": "^1.0.1",
     "react-redux-toastr": "^7.6.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
